@@ -93,6 +93,8 @@ FlameRegressionTest::CreateDevices ()
 {
   // 1. setup WiFi
   YansWifiPhyHelper wifiPhy = YansWifiPhyHelper::Default ();
+  // This test suite output was originally based on YansErrorRateModel   
+  wifiPhy.SetErrorRateModel ("ns3::YansErrorRateModel"); 
   YansWifiChannelHelper wifiChannel = YansWifiChannelHelper::Default ();
   wifiPhy.SetChannel (wifiChannel.Create ());
   // 2. setup mesh
